# screensavers

./: .gitignore  LICENSE  README.md
GoldenRatio/: CMakeLists.txt  init.cpp  init.h  screensaver.cpp  settings.cpp  win_compat.cpp
Mandelbrot/: CMakeLists.txt  CMakePresets.json  main.h  screensaver.cpp  settings.cpp
TEMPLATE_SCR/: CMakeLists.txt  CMakePresets.json  init.h  main.h  screensaver.cpp  settings.cpp  win_compat.cpp
